fix: add new section buttons position with collapsed TOC
On small screen size, the TOC should be displayed above the artidoc.
The document takes all the available width.
Add new section button is displayed inside the artidoc. (no changes)

On medium screen size, the TOC should be displayed in the right sidebar.
If this sidebar is expanded, then the artidoc takes all the available
width.
Add new section button is displayed inside the artidoc. (no changes)

If the sidebar is collapsed, then if there is enough room, then the
artidoc will be narowed so that it is displayed as a document.
In that case, the Add new section button should be displayed outside of
the artidoc, in the left margin. (This is the purpose of this
contribution)

On large screen size, the TOC is still displayed in the right sidebar.
Sidebar collapsed or not, the artidoc is displayed as a document.
Add new sectino button is always displayed outside of the artidoc, in
the left margin. (no changes)

Part of story #40457: Modify flat document outline

--- a/plugins/artidoc/scripts/artidoc/src/themes/includes/_viewport-breakpoint.scss
+++ b/plugins/artidoc/scripts/artidoc/src/themes/includes/_viewport-breakpoint.scss
@@ -20,7 +20,7 @@
 @use "size";
 
 $small-screen-size: 1024px;
-$medium-screen-size: calc(
+$medium-screen-size-when-document-sidebar-is-expanded: calc(
     #{global-variables.$sidebar-expanded-width} + (
             2 * #{size.$add-section-button-container-width} + #{size.$document-width}
         ) / #{size.$document-container-width-ratio}
